tests/snapshots/snapshots/snapshots__snapshots__json_output__stats_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_json(&json)
---
{
  "summary": {
    "total_issues": 1,
    "open_issues": 1,
    "in_progress_issues": 0,
    "closed_issues": 0,
    "blocked_issues": 0,
    "deferred_issues": 0,
    "draft_issues": 0,
    "ready_issues": 1,
    "tombstone_issues": 0,
    "pinned_issues": 0,
    "epics_eligible_for_closure": 0
  }
}
