tests/snapshots/snapshots/snapshots__snapshots__json_output__where_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: normalize_where_json(&json)
---
{
  "database_path": "/WORKSPACE/.beads",
  "path": "/WORKSPACE/.beads",
  "prefix": "bd"
}
